Bug 1406664: Wallpaper over doc shell GetChildAt returning a failure/null item.  Unclear when that would happen, but GetChildAt does have an error return, this handles it.  There are very few crashes with this signature, and this just stops the null pointer crash.  r=catalinb

MozReview-Commit-ID: 57Bs9ihIpAW